Work in progress on new GLChart

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -24,6 +24,7 @@ ADD_TEST(calcdatasettest)
 ADD_TEST(datasettest)
 ADD_TEST(ggrtest)
 ADD_TEST(glbartest)
+ADD_TEST(glcharttest)
 ADD_TEST(glgridtest)
 ADD_TEST(glimagetest)
 ADD_TEST(glscreentest)
