windows build changes

--- a/libcview/CMakeLists.txt
+++ b/libcview/CMakeLists.txt
@@ -42,11 +42,10 @@ INCLUDE_DIRECTORIES(${GL_H_INCLUDE} ${OPENGL_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIR_freetype2})
 INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIR_ft2build})
 INCLUDE_DIRECTORIES(${FTGL_INCLUDE_DIR})
-INCLUDE_DIRECTORIES(${WAND_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${ImageMagick_MagickWand_INCLUDE_DIR})
 
 ADD_DEFINITIONS(${FOUNDATION_FLAGS})
-ADD_DEFINITIONS(${WAND_CFLAGS})
-LINK_DIRECTORIES(${FTGL_LIBRARY_DIRS} ${WAND_LIBRARY_DIRS} ${CMAKE_BINARY_DIR}/libcview-data)
+LINK_DIRECTORIES(${FTGL_LIBRARY_DIRS} ${CMAKE_BINARY_DIR}/libcview-data)
 ADD_LIBRARY(libcview ${LIB_TYPE} ${CVIEW_DATA_SRCS} ${CVIEW_DATA_HDRS} )
 SET_TARGET_PROPERTIES(libcview PROPERTIES OUTPUT_NAME cview)
 
@@ -54,7 +53,8 @@ TARGET_LINK_LIBRARIES(libcview ${FOUNDATION_LIBRARIES})
 TARGET_LINK_LIBRARIES(libcview ${GLUT_LIBRARIES})
 TARGET_LINK_LIBRARIES(libcview ${OPENGL_LIBRARIES})
 TARGET_LINK_LIBRARIES(libcview ${FTGL_LIBRARY})
-TARGET_LINK_LIBRARIES(libcview ${WAND_LIBRARIES} )
+TARGET_LINK_LIBRARIES(libcview ${ImageMagick_MagickWand_LIBRARY} )
+TARGET_LINK_LIBRARIES(libcview ${ImageMagick_MagickCore_LIBRARY} )
 IF(MINGW)
 	TARGET_LINK_LIBRARIES(libcview psapi)
 ENDIF()
