--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,9 +71,8 @@ FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(PkgConfig)
 FIND_PACKAGE(Freetype)
 FIND_PACKAGE(FTGL REQUIRED)
-#PKG_CHECK_MODULES(FTGL REQUIRED ftgl)
 PKG_CHECK_MODULES(OSMESA osmesa)
-PKG_CHECK_MODULES(WAND MagickWand)
+FIND_PACKAGE(ImageMagick COMPONENTS MagickWand MagickCore) 
 
 FIND_LIBRARY(GENDERS genders)
 IF(GENDERS)
