initial try at using mathGL... going to re-write a little now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(PkgConfig)
 FIND_PACKAGE(Freetype)
 FIND_PACKAGE(FTGL REQUIRED)
+FIND_PACKAGE(MathGL2)
 #PKG_CHECK_MODULES(FTGL REQUIRED ftgl)
 PKG_CHECK_MODULES(OSMESA osmesa)
 PKG_CHECK_MODULES(WAND MagickWand)
