--- a/libcview/CMakeLists.txt
+++ b/libcview/CMakeLists.txt
@@ -28,6 +28,10 @@ IF(HAVE_GENDERS)
 	LIST(APPEND CVIEW_DATA_CLASSES GLDataCenter DataCenter/Rack DataCenter/Node DataCenter/Locatable DataCenter/Vector)
 ENDIF(HAVE_GENDERS)
 
+IF(MATHGL2_FOUND)
+	LIST(APPEND CVIEW_DATA_CLASSES GLMathGL)
+ENDIF(MATHGL2_FOUND)
+
 SET(CVIEW_DATA_HDRS cview.h GLScreenDelegate.h Pickable.h Wand.h)
 
 SET(CVIEW_DATA_SRCS utils.m)
@@ -43,7 +47,9 @@ INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIR_freetype2})
 INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIR_ft2build})
 INCLUDE_DIRECTORIES(${FTGL_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${WAND_INCLUDE_DIRS})
-
+IF(MATHGL2_FOUND)
+	INCLUDE_DIRECTORIES(${MATHGL2_INCLUDE_DIRS})
+ENDIF()
 ADD_DEFINITIONS(${FOUNDATION_FLAGS})
 ADD_DEFINITIONS(${WAND_CFLAGS})
 LINK_DIRECTORIES(${FTGL_LIBRARY_DIRS} ${WAND_LIBRARY_DIRS} ${CMAKE_BINARY_DIR}/libcview-data)
@@ -54,7 +60,10 @@ TARGET_LINK_LIBRARIES(libcview ${FOUNDATION_LIBRARIES})
 TARGET_LINK_LIBRARIES(libcview ${GLUT_LIBRARIES})
 TARGET_LINK_LIBRARIES(libcview ${OPENGL_LIBRARIES})
 TARGET_LINK_LIBRARIES(libcview ${FTGL_LIBRARY})
-TARGET_LINK_LIBRARIES(libcview ${WAND_LIBRARIES} )
+TARGET_LINK_LIBRARIES(libcview ${WAND_LIBRARIES})
+IF(MATHGL2_FOUND)
+	TARGET_LINK_LIBRARIES(libcview ${MATHGL2_LIBRARIES})
+ENDIF()
 IF(MINGW)
 	TARGET_LINK_LIBRARIES(libcview psapi)
 ENDIF()
