--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -36,6 +36,9 @@ ADD_TEST(webdatasettest)
 ADD_TEST(xydatasettest)
 ADD_TEST(datasetloadtest)
 ADD_TEST(defaulttest)
+IF(MATHGL2_FOUND)
+	ADD_TEST(glmathgltest)
+ENDIF()
 
 ADD_EXECUTABLE(calcdatatest calcdatatest.c)
 TARGET_LINK_LIBRARIES(calcdatatest libcview-data)
