some work on the 2d graph

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ IF (NOT SOURCE_BUILD_ONLY)
 #detect libraries
 IF (APPLE)
 	SET(FOUNDATION_LIBRARIES "-framework Foundation")
-    SET(CMAKE_OSX_DEPLOYMENT_TARGET 10.8)
+    #SET(CMAKE_OSX_DEPLOYMENT_TARGET 10.10)
 ELSEIF (UNIX OR MINGW)
 	FIND_PROGRAM(GNUSTEP_CONFIG gnustep-config)
 	MESSAGE("Found gnustep-config at: ${GNUSTEP_CONFIG}")
@@ -73,7 +73,8 @@ FIND_PACKAGE(Freetype)
 FIND_PACKAGE(FTGL REQUIRED)
 FIND_PACKAGE(MathGL2)
 
-PKG_CHECK_MODULES(OSMESA osmesa)
+#PKG_CHECK_MODULES(OSMESA osmesa)
+FIND_LIBRARY(OSMESA_LIBRARY PATHS /opt/local/lib)
 FIND_PACKAGE(ImageMagick COMPONENTS MagickWand MagickCore) 
 
 FIND_LIBRARY(GENDERS genders)
