--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,7 +8,7 @@ INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIR_ft2build})
 INCLUDE_DIRECTORIES(${FTGL_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${WAND_INCLUDE_DIRS})
 
-MACRO(ADD_TEST name) 
+MACRO(ADD_TEST name)
 	MESSAGE("Adding Test for ${name}")
 	IF(${ARGC} EQUAL 1)
 		ADD_EXECUTABLE(${name} ${name}.m)
@@ -36,6 +36,7 @@ ADD_TEST(graphitedatasettest)
 ADD_TEST(xydatasettest)
 ADD_TEST(datasetloadtest)
 ADD_TEST(defaulttest)
+ADD_TEST(glcropdatatest)
 
 ADD_EXECUTABLE(calcdatatest calcdatatest.c)
 TARGET_LINK_LIBRARIES(calcdatatest libcview-data)
