--- a/libcview-data/CMakeLists.txt
+++ b/libcview-data/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 SET(CVIEW_DATA_CLASSES
 	CalculatedDataSet
+	CropDataSet
 	DataSet
 	Defaults
 	DictionaryExtra
@@ -18,7 +19,7 @@ SET(CVIEW_DATA_CLASSES
 
 SET(CVIEW_DATA_HDRS cview-data.h calcdataset.h debug.h PList.h)
 
-SET(CVIEW_DATA_SRCS 
+SET(CVIEW_DATA_SRCS
 	datautils.m
 	calcdatasetkernel.c
 )
@@ -39,4 +40,4 @@ INSTALL(TARGETS libcview-data DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT "lib
 INSTALL(FILES ${CVIEW_DATA_HDRS} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CMAKE_PROJECT_NAME}" COMPONENT "libcview_data_Header_Files")
 
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cview-data.pc.in ${CMAKE_CURRENT_BINARY_DIR}/cview-data.pc)
-INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/cview-data.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig COMPONENT "libcview_data_pkg_config_file") 
+INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/cview-data.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig COMPONENT "libcview_data_pkg_config_file")
